src/test/deca/context/invalid/homemade/declclass_wrongorder.deca
// trying to declare class in wrong order

class A extends B {}

class B {}